<package format="2">
  <name>tsuten</name>
  <version>1.0.0</version>
  <description>Metapackage for Tsuten control.</description>

  <maintainer email="mitukou1109@gmail.com">Mitsuhiro
    Sakamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tsuten_behavior</exec_depend>
  <exec_depend>tsuten_description</exec_depend>
  <exec_depend>tsuten_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>