<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>tsuten_behavior</name>
  <version>1.0.0</version>
  <description>Implements behavior of Tsuten.</description>
  <maintainer email="mitukou1109@gmail.com">Mitsuhiro Sakamoto</maintainer>

  <license>MIT</license>

  <build_depend>qtbase5-dev</build_depend>

  <depend>actionlib</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tsuten_mechanism</depend>
  <depend>tsuten_msgs</depend>
  <depend>tsuten_navigation</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rqt_common_plugins</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rviz plugin="${prefix}/behavior_control_panel_plugin.xml" />
  </export>
</package>