<package format="2">
  <name>tsuten_behavior</name>
  <version>1.0.0</version>
  <description>Implements behavior of Tsuten.</description>
  <maintainer email="mitukou1109@gmail.com">Mitsuhiro Sakamoto</maintainer>

  <license>MIT</license>

  <build_depend>qtbase5-dev</build_depend>

  <depend>actionlib</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tsuten_mechanism</depend>
  <depend>tsuten_msgs</depend>
  <depend>tsuten_navigation</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>libqt5-widgets</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>