<?xml version="1.0"?>
<package format="2">
  <name>tsuten_description</name>
  <version>1.0.0</version>
  <description>Implements description of Tsuten for visualization.</description>

  <maintainer email="mitukou1109@gmail.com">Mitsuhiro Sakamoto</maintainer>

  <license>MIT</license>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>robot</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>