<package format="2">
  <name>tsuten_description</name>
  <version>1.0.0</version>
  <description>Implements description of Tsuten for visualization.</description>

  <maintainer email="mitukou1109@gmail.com">Mitsuhiro Sakamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>